--- a/src/scss/imports/_layout.scss
+++ b/src/scss/imports/_layout.scss
@@ -22,175 +22,137 @@
 /* a. General Styles
 /* ------------------------------------------------------------------ */
 
-body {
-  background: #0f0f0f;
-}
+// body {
+//   background: #0f0f0f;
+// }
 
 /* ------------------------------------------------------------------ */
 /* b. Header Styles
 /* ------------------------------------------------------------------ */
 
-header {
-  position: relative;
-  height: 800px;
-  min-height: 500px;
-  width: 100%;
+// header {
+//   position: relative;
+//   height: 800px;
+//   min-height: 500px;
+//   width: 100%;
 
-  text-align: center;
-  overflow: hidden;
-}
+//   text-align: center;
+//   overflow: hidden;
+// }
 
-/* vertically center banner section */
-header:before {
-  content: "";
-  display: inline-block;
-  vertical-align: middle;
-  height: 100%;
-}
-header .banner {
-  display: inline-block;
-  vertical-align: middle;
-  margin: 0 auto;
-  width: 85%;
-  padding-bottom: 30px;
-  text-align: center;
-}
+// /* vertically center banner section */
+// header:before {
+//   content: "";
+//   display: inline-block;
+//   vertical-align: middle;
+//   height: 100%;
+// }
+// header .banner {
+//   display: inline-block;
+//   vertical-align: middle;
+//   margin: 0 auto;
+//   width: 85%;
+//   padding-bottom: 30px;
+//   text-align: center;
+// }
 
-header .banner-text {
-  width: 100%;
-}
-header .banner-text h1 {
-  color: #fff;
-  letter-spacing: -2px;
-  margin: 0 auto 18px auto;
-}
-header .banner-text h3 {
-  padding-top: 3rem;
-  font-size: 2.5rem;
-  color: #ddd;
-  margin: 0 auto;
-  width: 70%;
-}
-header .banner-text h3 span,
-header .banner-text h3 a {
-  color: #fff;
-}
-header .banner-text hr {
-  width: 60%;
-  margin: 18px auto 24px auto;
-  border-color: #2f2d2e;
-  border-color: rgba(150, 150, 150, 0.1);
-}
+// header .banner-text {
+//   width: 100%;
+// }
+// header .banner-text h1 {
+//   color: #fff;
+//   letter-spacing: -2px;
+//   margin: 0 auto 18px auto;
+// }
+// header .banner-text h3 {
+//   padding-top: 3rem;
+//   font-size: 2.5rem;
+//   color: #ddd;
+//   margin: 0 auto;
+//   width: 70%;
+// }
+// header .banner-text h3 span,
+// header .banner-text h3 a {
+//   color: #fff;
+// }
+// header .banner-text hr {
+//   width: 60%;
+//   margin: 18px auto 24px auto;
+//   border-color: #2f2d2e;
+//   border-color: rgba(150, 150, 150, 0.1);
+// }
 
-/* header social links */
-header .social {
-  margin: 24px 0;
-  padding: 0;
-  font-size: 30px;
-}
-header .social li {
-  display: inline-block;
-  margin: 0 15px;
-  padding: 0;
-}
-header .social li a {
-  color: #fff;
-}
-header .social li a:hover {
-  color: #0762f9;
-}
+// /* primary navigation
+// --------------------------------------------------------------------- */
+// #nav-wrap ul,
+// #nav-wrap li,
+// #nav-wrap a {
+//   margin: 0;
+//   padding: 0;
+//   border: none;
+//   outline: none;
+// }
 
-/* scrolldown link */
-header .scrolldown a {
-  position: absolute;
-  background-color: #1abc9c;
-  bottom: 30px;
-  left: 50%;
-  margin-left: -29px;
-  color: #fff;
-  display: block;
-  height: 42px;
-  width: 42px;
-  font-size: 42px;
-  line-height: 42px;
-  border-radius: 100%;
-  transition: all 0.3s ease-in-out;
-}
-header .scrolldown a:hover {
-  background-color: #0762f9;
-}
+// /* nav-wrap */
+// #nav-wrap {
+//   font-size: 12px;
+//   font-weight: bold;
+//   width: 100%;
+//   text-transform: uppercase;
+//   letter-spacing: 2.5px;
+//   margin: 0 auto;
+//   z-index: 100;
+//   position: fixed;
+//   left: 0;
+//   top: 0;
+// }
+// .opaque {
+//   background-color: #333;
+// }
 
-/* primary navigation
---------------------------------------------------------------------- */
-#nav-wrap ul,
-#nav-wrap li,
-#nav-wrap a {
-  margin: 0;
-  padding: 0;
-  border: none;
-  outline: none;
-}
+// /* hide toggle button */
+// #nav-wrap > a.mobile-btn {
+//   display: none;
+// }
 
-/* nav-wrap */
-#nav-wrap {
-  font-size: 12px;
-  font-weight: bold;
-  width: 100%;
-  text-transform: uppercase;
-  letter-spacing: 2.5px;
-  margin: 0 auto;
-  z-index: 100;
-  position: fixed;
-  left: 0;
-  top: 0;
-}
-.opaque {
-  background-color: #333;
-}
+// ul#nav {
+//   min-height: 48px;
+//   width: auto;
 
-/* hide toggle button */
-#nav-wrap > a.mobile-btn {
-  display: none;
-}
+//   /* center align the menu */
+//   text-align: center;
+// }
+// ul#nav li {
+//   position: relative;
+//   list-style: none;
+//   height: 48px;
+//   display: inline-block;
+// }
 
-ul#nav {
-  min-height: 48px;
-  width: auto;
+// /* Links */
+// ul#nav li a {
+//   /* 8px padding top + 8px padding bottom + 32px line-height = 48px */
 
-  /* center align the menu */
-  text-align: center;
-}
-ul#nav li {
-  position: relative;
-  list-style: none;
-  height: 48px;
-  display: inline-block;
-}
+//   display: inline-block;
+//   padding: 8px 13px;
+//   line-height: 32px;
+//   text-decoration: none;
+//   text-align: left;
+//   color: #fff;
 
-/* Links */
-ul#nav li a {
-  /* 8px padding top + 8px padding bottom + 32px line-height = 48px */
+//   -webkit-transition: color 0.2s ease-in-out;
+//   -moz-transition: color 0.2s ease-in-out;
+//   -o-transition: color 0.2s ease-in-out;
+//   -ms-transition: color 0.2s ease-in-out;
+//   transition: color 0.2s ease-in-out;
+// }
 
-  display: inline-block;
-  padding: 8px 13px;
-  line-height: 32px;
-  text-decoration: none;
-  text-align: left;
-  color: #fff;
-
-  -webkit-transition: color 0.2s ease-in-out;
-  -moz-transition: color 0.2s ease-in-out;
-  -o-transition: color 0.2s ease-in-out;
-  -ms-transition: color 0.2s ease-in-out;
-  transition: color 0.2s ease-in-out;
-}
-
-ul#nav li a:active {
-  background-color: transparent !important;
-}
-ul#nav li.current a {
-  color: #fe6928;
-}
+// ul#nav li a:active {
+//   background-color: transparent !important;
+// }
+// ul#nav li.current a {
+//   color: $red-orange;
+// }
 
 /* ------------------------------------------------------------------ */
 /* c. About Section
@@ -1100,24 +1062,4 @@ footer .social-links li:first-child {
 }
 #go-top a:hover {
   background-color: #0f9095;
-}
-
-.social .btn:first-child {
-  margin-right: 30px;
-}
-.social .btn {
-  padding-left: 30px;
-  padding-right: 30px;
-}
-.social .btn i {
-  margin-right: 15px;
-}
-.project-btn {
-  //   background-color: #1abc9c !important;
-  background-color: rgb(254, 105, 40) !important;
-  color: black;
-  font-size: 2rem;
-}
-.github-btn {
-  background-color: #34495e !important;
 }
