--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,77 +1,68 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap");
+@import "~react-image-gallery/styles/scss/image-gallery.scss";
 @import "imports/variables";
-// @import "imports/reset";
+@import "imports/reset";
+// maybe get rid of base
 @import "imports/base";
 @import "imports/nav";
 @import "imports/header";
 @import "imports/layout";
 
-header {
+// section test
+#section {
   height: 100vh;
+  background: #000;
+  // background-image: url("/img/testimonials-bg.jpg");
+  background-image: url("https://res.cloudinary.com/deedee/image/upload/v1628109923/real-estate/testimonials-bg.jpg");
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 96px;
+  padding-bottom: 66px;
+  overflow: hidden;
+  h2 {
+    font-family: "Roboto Slab", serif;
+    color: $dk-red-orange;
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  .gallery-container {
+    display: flex;
+    max-width: 80vw;
+    margin: 0 auto;
+    color: white;
+    padding: 2rem;
+    background-color: #000000bb;
+    border-radius: 8px;
+  }
+  .gallery {
+    min-width: 300px;
+    margin-right: 2rem;
+    margin-top: 3rem;
+  }
+  // .gallery-class {
+  //   border-radius: 50%;
+  // }
+  .image-gallery-left-nav,
+  .image-gallery-right-nav {
+    padding: 20px 5px;
+  }
+  .image-gallery-icon {
+    opacity: 0.25;
+  }
 }
 
-h1 {
-  font-family: "Roboto Slab", serif;
-  font-size: 7rem;
-  letter-spacing: -2px;
-  margin-bottom: 3rem;
-}
-
-/* header social links */
-header .social {
-  margin: 24px 0;
-  padding: 0;
-  font-size: 30px;
-}
-header .social li {
-  display: inline-block;
-  margin: 0 15px;
-  padding: 0;
-}
-header .social li a {
-  color: #fff;
-}
-header .social li a:hover {
-  color: #0762f9;
-}
-.social .btn {
-  padding-left: 30px;
-  padding-right: 30px;
-}
-.social .btn i {
-  margin-right: 15px;
-}
-.project-btn {
-  //   background-color: #1abc9c !important;
-  background-color: $red-orange;
-  color: #fff;
-  font-size: 2rem;
-}
-.github-btn {
-  background-color: #34495e !important;
-}
-
-/* scrolldown link */
-header .scrolldown a {
-  position: absolute;
-  background-color: yellow;
-  bottom: 30px;
-  left: 50%;
-  margin-left: -29px;
-  color: #000;
-  display: block;
-  height: 42px;
-  width: 42px;
-  font-size: 42px;
-  line-height: 42px;
-  border-radius: 100%;
-  transition: all 0.3s ease-in-out;
-}
-header .scrolldown a:hover {
-  background-color: rgb(254, 105, 40);
-}
-.icon-down-circle:before {
-  content: "⬇";
-  color: #333;
-  font-style: normal;
-}
+// #section:after {
+//   content: " ";
+//   display: block;
+//   position: absolute;
+//   left: 0;
+//   top: 100vh;
+//   width: 100%;
+//   height: 100%;
+//   opacity: 0.5;
+//   background-image: linear-gradient(to bottom #11111105 #11111105);
+//   background-repeat: no-repeat;
+//   background-position: 50% 0;
+//   background-size: cover;
+// }
