--- a/src/scss/imports/_header.scss
+++ b/src/scss/imports/_header.scss
@@ -1,4 +1,9 @@
 header {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   .banner {
     display: inline-block;
     vertical-align: middle;
@@ -7,56 +12,70 @@ header {
     padding-bottom: 30px;
     text-align: center;
   }
-
-  // header {
-  //   position: relative;
-  //   height: 800px;
-  //   min-height: 500px;
-  //   width: 100%;
-
-  //   text-align: center;
-  //   overflow: hidden;
-  // }
-
-  /* vertically center banner section */
-  &:before {
-    content: "";
-    display: inline-block;
-    vertical-align: middle;
-    height: 100%;
-  }
-  .banner {
-    display: inline-block;
-    vertical-align: middle;
-    margin: 0 auto;
-    width: 85%;
-    padding-bottom: 30px;
-    text-align: center;
-  }
-
   .banner-text {
-    width: 100%;
+    h1 {
+      font-family: "Roboto Slab", serif;
+      font-size: 4.75rem;
+      letter-spacing: -2px;
+      margin-bottom: 3rem;
+      color: $dk-red-orange;
+      letter-spacing: -2px;
+      margin: 0 auto 18px auto;
+    }
+    h2 {
+      text-transform: uppercase;
+      font-size: 2rem;
+      color: #fff;
+      font-weight: bold;
+      letter-spacing: 4px;
+      margin-bottom: 3rem;
+    }
+    p {
+      padding-top: 3rem;
+      font-size: 1.5rem;
+      line-height: 1.5;
+      color: #ddd;
+      margin: 0 auto;
+      width: 70%;
+    }
+    .cta {
+      margin: 24px 0;
+      padding: 0;
+      a {
+        color: #fff;
+        font-size: 2rem;
+        font-weight: bold;
+        padding-left: 30px;
+        padding-right: 30px;
+        background-color: $dk-red-orange;
+        color: #fff;
+        font-size: 1.25rem;
+        border-radius: 6px;
+      }
+    }
   }
-  .banner-text h1 {
-    color: #fff;
-    letter-spacing: -2px;
-    margin: 0 auto 18px auto;
+  .scroll-down a {
+    position: absolute;
+    background-color: $dk-red-orange;
+    bottom: 30px;
+    left: calc(50% - 21px);
+    color: #ffffffee;
+    display: block;
+    height: 42px;
+    width: 42px;
+    font-size: 62px;
+    line-height: 22px;
+    border-radius: 100%;
+    transition: all 0.3s ease-in-out;
   }
-  .banner-text h3 {
-    padding-top: 3rem;
-    font-size: 2.5rem;
-    color: #ddd;
-    margin: 0 auto;
-    width: 70%;
+  .scroll-down a:hover {
+    background-color: rgb(254, 105, 40);
   }
-  .banner-text h3 span,
-  .banner-text h3 a {
-    color: #fff;
-  }
-  .banner-text hr {
-    width: 60%;
-    margin: 18px auto 24px auto;
-    border-color: #2f2d2e;
-    border-color: rgba(150, 150, 150, 0.1);
+  .icon-down-circle:before {
+    content: "^";
+    display: block;
+    transform: rotate(180deg);
+    font-style: normal;
+    text-align: center;
   }
 }
