--- a/src/scss/imports/_header.scss
+++ b/src/scss/imports/_header.scss
@@ -16,6 +16,7 @@ header {
     h1 {
       font-family: "Roboto Slab", serif;
       font-size: 4.75rem;
+      line-height: 4.75rem;
       letter-spacing: -2px;
       margin-bottom: 3rem;
       color: $dk-red-orange;
