--- a/src/scss/imports/_nav.scss
+++ b/src/scss/imports/_nav.scss
@@ -34,6 +34,7 @@ ul#nav {
   width: auto;
   /* center align the menu */
   text-align: center;
+  background: #11111199;
 }
 ul#nav li {
   position: relative;
@@ -64,5 +65,5 @@ ul#nav li a:active {
   background-color: transparent !important;
 }
 ul#nav li.current a {
-  color: $red-orange;
+  color: $dk-red-orange;
 }
