--- a/src/scss/imports/_header.scss
+++ b/src/scss/imports/_header.scss
@@ -21,7 +21,7 @@ header {
       margin-bottom: 3rem;
       color: $dk-red-orange;
       letter-spacing: -2px;
-      margin: 0 auto 18px auto;
+      margin: 0 auto;
     }
     h2 {
       text-transform: uppercase;
