--- a/src/scss/imports/_section.scss
+++ b/src/scss/imports/_section.scss
@@ -89,7 +89,7 @@
   margin-bottom: 3rem;
   font-style: italic;
   letter-spacing: -2px;
-  margin: 0 auto 18px auto;
+  margin: 3rem auto 2rem auto;
   text-decoration: underline;
   text-decoration-color: $yellow;
 }
