--- a/src/scss/imports/_variables.scss
+++ b/src/scss/imports/_variables.scss
@@ -2,3 +2,6 @@ $dk-gray: #838c95;
 $red-orange: #fe6928;
 $dk-red-orange: #d84607;
 $yellow: #ffc600;
+// breakpoints
+$small: 360px;
+$large: 940px;
