--- a/src/scss/imports/_nav.scss
+++ b/src/scss/imports/_nav.scss
@@ -20,13 +20,43 @@
   left: 0;
   top: 0;
 }
+
+#nav-wrap > a {
+  width: 48px;
+  height: 48px;
+  text-align: left;
+  background-color: $dk-red-orange;
+  position: relative;
+  border: none;
+  float: right;
+
+  text-shadow: none;
+  color: transparent;
+
+  position: relative;
+  top: 0px;
+  right: 30px;
+}
+#nav-wrap > a:before,
+#nav-wrap > a:after {
+  position: absolute;
+  border: 2px solid #fff;
+  top: 35%;
+  left: 25%;
+  right: 25%;
+  content: "";
+}
+#nav-wrap > a:after {
+  top: 60%;
+}
+
 .opaque {
   background-color: #333;
 }
 
 /* hide toggle button */
 #nav-wrap > a.mobile-btn {
-  display: none;
+  // display: none;
 }
 
 ul#nav {
