--- a/src/scss/imports/_section.scss
+++ b/src/scss/imports/_section.scss
@@ -2,7 +2,12 @@
   // height: 100vh;
   background: #000;
   position: relative;
-  background-image: url("https://res.cloudinary.com/deedee/image/upload/v1628109923/real-estate/testimonials-bg.jpg");
+  background: linear-gradient(
+      to bottom,
+      rgba(15, 15, 15, 1),
+      rgba(255, 255, 255, 0)
+    ),
+    url("https://res.cloudinary.com/deedee/image/upload/v1628109923/real-estate/testimonials-bg.jpg");
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -55,26 +60,43 @@
 }
 
 .gallery-container {
-  max-width: 80vw;
+  max-width: 90vw;
   margin: 0 auto;
+  @media screen and (min-width: $large) {
+    max-width: 80vw;
+  }
 }
 
 .card-container {
-  max-width: 80vw;
+  max-width: 90vw;
   margin: 0 auto;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   gap: 1.5rem;
+  @media screen and (min-width: $large) {
+    max-width: 80vw;
+    flex-direction: row;
+  }
+  > div {
+    flex-grow: 0;
+    flex-basis: 33%;
+  }
 }
 
 .card {
   flex: 0 1 32%;
   display: flex;
+  flex-direction: column;
   color: white;
-  padding: 2rem;
   background-color: #000000bb;
   border-radius: 8px;
+  padding-bottom: 1rem;
   margin-bottom: 2rem;
+  @media screen and (min-width: $large) {
+    padding: 2rem;
+    flex-direction: row;
+  }
 }
 
 .column {
