--- a/src/scss/imports/_base.scss
+++ b/src/scss/imports/_base.scss
@@ -208,13 +208,13 @@ a,
 a:visited {
   text-decoration: none;
   outline: 0;
-  color: #11abb0;
+  color: $red-orange;
   transition: color 0.3s ease-in-out;
 }
-a:hover,
-a:focus {
-  color: #313131;
-}
+// a:hover,
+// a:focus {
+//   color: #313131;
+// }
 p a,
 p a:visited {
   line-height: inherit;
