--- a/src/scss/imports/_nav.scss
+++ b/src/scss/imports/_nav.scss
@@ -1,6 +1,6 @@
-#nav-wrap ul,
-#nav-wrap li,
-#nav-wrap a {
+nav ul,
+nav li,
+nav a {
   margin: 0;
   padding: 0;
   border: none;
@@ -8,7 +8,7 @@
 }
 
 /* nav-wrap */
-#nav-wrap {
+nav {
   font-size: 12px;
   font-weight: bold;
   width: 100%;
@@ -21,24 +21,21 @@
   top: 0;
 }
 
-#nav-wrap > a {
+nav > a {
   width: 48px;
   height: 48px;
-  text-align: left;
+  // text-align: left;
   background-color: $dk-red-orange;
   position: relative;
   border: none;
   float: right;
-
-  text-shadow: none;
   color: transparent;
-
   position: relative;
   top: 0px;
   right: 30px;
 }
-#nav-wrap > a:before,
-#nav-wrap > a:after {
+nav > a:before,
+nav > a:after {
   position: absolute;
   border: 2px solid #fff;
   top: 35%;
@@ -46,8 +43,18 @@
   right: 25%;
   content: "";
 }
-#nav-wrap > a:after {
+nav > a:after {
   top: 60%;
+}
+
+nav a.close:before {
+  top: 50%;
+  transform: rotate(45deg);
+}
+
+nav a.close:after {
+  top: 50%;
+  transform: rotate(-45deg);
 }
 
 .opaque {
@@ -55,18 +62,18 @@
 }
 
 /* hide toggle button */
-#nav-wrap > a.mobile-btn {
-  // display: none;
+nav > a.mobile-btn {
+  display: none;
 }
 
-ul#nav {
+nav ul {
   min-height: 48px;
   width: auto;
   /* center align the menu */
   text-align: center;
   background: #11111199;
 }
-ul#nav li {
+nav ul li {
   position: relative;
   list-style: none;
   height: 48px;
@@ -74,26 +81,29 @@ ul#nav li {
 }
 
 /* Links */
-ul#nav li a {
+nav ul li a {
   /* 8px padding top + 8px padding bottom + 32px line-height = 48px */
-
   display: inline-block;
   padding: 8px 13px;
   line-height: 32px;
   text-decoration: none;
   text-align: left;
   color: #fff;
-
-  -webkit-transition: color 0.2s ease-in-out;
-  -moz-transition: color 0.2s ease-in-out;
-  -o-transition: color 0.2s ease-in-out;
-  -ms-transition: color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out;
 }
 
-ul#nav li a:active {
-  background-color: transparent !important;
+// ul li a:active {
+//   background-color: transparent !important;
+// }
+
+nav ul li.current a {
+  // color: $dk-red-orange;
 }
-ul#nav li.current a {
+
+nav ul li a:hover {
   color: $dk-red-orange;
+}
+
+nav ul li a:visited {
+  color: #fff;
 }
