--- a/src/scss/imports/_header.scss
+++ b/src/scss/imports/_header.scss
@@ -79,4 +79,16 @@ header {
     font-style: normal;
     text-align: center;
   }
+  .image-container img {
+    display: none;
+    @media screen and (min-width: $large) {
+      display: inline-block;
+      width: 240px;
+      height: 240px;
+      margin: 1rem;
+      object-fit: cover;
+      object-position: right top;
+      border-radius: 50%;
+    }
+  }
 }
