--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -5,9 +5,8 @@
 @import "~react-image-gallery/styles/scss/image-gallery.scss";
 @import "imports/variables";
 @import "imports/reset";
-// maybe get rid of base
 @import "imports/base";
 @import "imports/nav";
 @import "imports/header";
 @import "imports/section";
-@import "imports/layout";
+@import "imports/quotes";
