changed color, added logo

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -4,7 +4,7 @@
 
 @import "~react-image-gallery/styles/scss/image-gallery.scss";
 @import "imports/variables";
-@import "imports/reset";
+// @import "imports/reset";
 @import "imports/base";
 @import "imports/nav";
 @import "imports/header";
