--- a/src/scss/imports/_header.scss
+++ b/src/scss/imports/_header.scss
@@ -38,18 +38,18 @@ header {
       color: #ddd;
       margin: 0 auto;
       width: 70%;
+      max-width: 840px;
     }
     .cta {
       margin: 24px 0;
       padding: 0;
       a {
-        color: #fff;
+        color: $black;
         font-size: 2rem;
         font-weight: bold;
         padding-left: 30px;
         padding-right: 30px;
         background-color: $dk-red-orange;
-        color: #fff;
         font-size: 1.25rem;
         border-radius: 6px;
       }
@@ -78,6 +78,7 @@ header {
     transform: rotate(180deg);
     font-style: normal;
     text-align: center;
+    color: $black;
   }
   .image-container img {
     display: none;
@@ -85,6 +86,7 @@ header {
       display: inline-block;
       width: 240px;
       height: 240px;
+      border: 3px solid $yellow;
       margin: 1rem;
       object-fit: cover;
       object-position: right top;
