--- a/src/scss/imports/_variables.scss
+++ b/src/scss/imports/_variables.scss
@@ -1,7 +1,13 @@
+$black: #000;
 $dk-gray: #838c95;
-$red-orange: #fe6928;
-$dk-red-orange: #d84607;
-$yellow: #ffc600;
+// $red-orange: #fe6928;
+// $dk-red-orange: #d84607;
+$red-orange: #baee0c;
+$dk-red-orange: #baee0c;
+// $yellow: #ffc600;
+$yellow: #baee0c;
+
 // breakpoints
 $small: 360px;
 $large: 940px;
+$max-width: 1250px;
