--- a/src/scss/imports/_section.scss
+++ b/src/scss/imports/_section.scss
@@ -56,6 +56,7 @@
   padding: 6px 12px;
   display: inline-block;
   transform: skewX(-12deg);
+  line-height: 1.2;
 }
 
 .gallery-container {
@@ -84,7 +85,6 @@
 }
 
 .card {
-  flex: 0 1 32%;
   display: flex;
   flex-direction: column;
   color: white;
@@ -92,9 +92,11 @@
   border-radius: 8px;
   padding-bottom: 1rem;
   margin-bottom: 2rem;
+  padding: 1rem;
   @media screen and (min-width: $large) {
     padding: 2rem;
     flex-direction: row;
+    flex: 0 1 32%;
   }
 }
 
