--- a/src/scss/imports/_base.scss
+++ b/src/scss/imports/_base.scss
@@ -255,7 +255,7 @@ input[type="reset"],
 input[type="button"] {
   font-size: 16px;
   line-height: 30px;
-  background: #11abb0;
+  background: $dk-red-orange;
   display: inline-block;
   text-decoration: none;
   letter-spacing: 0;
