--- a/src/scss/imports/_nav.scss
+++ b/src/scss/imports/_nav.scss
@@ -19,6 +19,9 @@ nav {
   position: fixed;
   left: 0;
   top: 0;
+  @media screen and (max-height: 760px) {
+    display: none;
+  }
 }
 
 nav > a {
