--- a/src/scss/imports/_section.scss
+++ b/src/scss/imports/_section.scss
@@ -79,8 +79,9 @@
     flex-direction: row;
   }
   > div {
-    flex-grow: 0;
+    // flex-grow: 0;
     flex-basis: 33%;
+    // display: flex;
   }
 }
 
